tambah tombol download

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 
 <body>
-    <h1>Overlay text on canvas image and save as base64</h1>
+    <h1>SPASI 2 KALI UNTUK GARIS BARU</h1>
     <div class="page-wrap">
         <div class="controls">
             <input class="controls__input" type="file" id="imageLoader" name="imageLoader" />
             <label class="controls__label" for="name">First, choose an image.</label>
 
-            <input class="controls__input" id="name" type="text" value="" />
-            <!-- <textarea class="controls__input" id="name" cols="30" rows="10"></textarea> -->
+            <!-- <input class="controls__input" id="name" type="text" value="" /> -->
+            <textarea class="controls__input" id="name" cols="30" rows="10"></textarea>
             <label class="controls__label" for="name">Overlay Text</label>
         </div>
         <div id="canvas-wrap">
@@ -25,8 +25,12 @@
                 <canvas id="canvasID"></canvas>
             </canvas>
         </div>
-
-        <script src="js/script.js"></script>
+        <br>
+        <button id="download">download</button>
+        <br>
+        <small>credit mba Ashley Hebler</small>
+    </div>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
